src/test/ui/feature-gates/feature-gate-staged_api.stderr
error: stability attributes may not be used outside of the standard library
  --> $DIR/feature-gate-staged_api.rs:11:1
   |
LL | #![stable(feature = "a", since = "b")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/feature-gate-staged_api.rs:18:1
   |
LL | #[stable(feature = "a", since = "b")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

